--- a/project-details.html
+++ b/project-details.html
@@ -5,11 +5,11 @@
 
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Project-Details| Bastun- Business Consulting HTML Template</title>
+    <title>Project-Details| Digital Minds On- Business Consulting HTML Template</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-     <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/icon.svg">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/icon.svg">
     <!-- Place favicon.ico in the root directory -->
 
     <!-- CSS here -->
@@ -538,7 +538,8 @@
                                     </div>
                                     <div class="sidebar__button">
                                         <a class="default__button sidebar__button__1" target="_blank"
-                                            href="assets/img/download.pdf">Download PDF<i class="icofont-file-pdf"></i></a>
+                                            href="assets/img/download.pdf">Download PDF<i
+                                                class="icofont-file-pdf"></i></a>
                                         <a class="default__button btn__black" target="_blank"
                                             href="assets/img/download.docx">Download DOC<i
                                                 class="icofont-file-document"></i></a>
@@ -588,17 +589,20 @@
                                                 <li class="nav-item" role="presentation">
                                                     <a href="#" class="projects__tab__link active" data-bs-toggle="tab"
                                                         data-bs-target="#projects__one"><img
-                                                            src="assets/img/project/project__11.png" alt="projectsimg"></a>
+                                                            src="assets/img/project/project__11.png"
+                                                            alt="projectsimg"></a>
                                                 </li>
                                                 <li class="nav-item" role="presentation">
                                                     <a href="#" class="projects__tab__link" data-bs-toggle="tab"
                                                         data-bs-target="#projects__two"><img
-                                                            src="assets/img/project/project__12.png" alt="projectsimg"></a>
+                                                            src="assets/img/project/project__12.png"
+                                                            alt="projectsimg"></a>
                                                 </li>
                                                 <li class="nav-item" role="presentation">
                                                     <a href="#" class="projects__tab__link" data-bs-toggle="tab"
                                                         data-bs-target="#projects__three"><img
-                                                            src="assets/img/project/project__13.png" alt="projectsimg"></a>
+                                                            src="assets/img/project/project__13.png"
+                                                            alt="projectsimg"></a>
                                                 </li>
 
 
@@ -770,7 +774,8 @@
                             <a href="index.html">
 
                                 <img class="bbb__animate" src="assets/img/footer/brand__badge.png" alt="Footer badge">
-                                <img class="bbb__icon" src="assets/img/footer/brand__badge__inner.png" alt="Footer icon badge">
+                                <img class="bbb__icon" src="assets/img/footer/brand__badge__inner.png"
+                                    alt="Footer icon badge">
                             </a>
                         </div>
                     </div>
@@ -843,7 +848,8 @@
                         <a href="index.html">
 
                             <img class="bbb__animate" src="assets/img/footer/brand__badge.png" alt="Footer badge">
-                            <img class="bbb__icon" src="assets/img/footer/brand__badge__inner.png" alt="Footer icon badge">
+                            <img class="bbb__icon" src="assets/img/footer/brand__badge__inner.png"
+                                alt="Footer icon badge">
                         </a>
                     </div>
                 </div>
@@ -955,7 +961,7 @@
                         <div class="row align-items-center">
                             <div class="col-xl-6 col-lg-6 col-md-6 col-12">
                                 <div class="copyright__left">
-                          <p>Copyright © 2024 <a href="index.html">Digitalminds on.</a> All Right Reserved</p>
+                                    <p>Copyright © 2024 <a href="index.html">Digitalminds on.</a> All Right Reserved</p>
                                 </div>
                             </div>
                             <div class="col-xl-6 col-lg-6 col-md-6 col-12">
@@ -977,21 +983,14 @@
                 </div>
             </div>
             <!-- footer__section__end -->
-               <!-- back to top -->
-               <a href="#top" class="back-to-top" id="backToTop">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up">
-                    <path d="M12 19V6M5 12l7-7 7 7"/>
+            <!-- back to top -->
+            <a class="back-to-top" id="backToTop">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up">
+                    <path d="M12 19V6M5 12l7-7 7 7" />
                 </svg>
             </a>
-                   <!-- back to top -->
-
-
-
-
-
-
-
-
+            <!-- back to top -->
     </main>
 
 
@@ -1005,7 +1004,26 @@
     <script src="assets/js/plugins.js"></script>
     <script src="assets/js/swiper-bundle.min.js"></script>
     <script src="assets/js/main.js"></script>
-
+    <!-- back to top -->
+    <script>
+        document.addEventListener("DOMContentLoaded", () => {
+            const backToTopButton = document.getElementById("backToTop");
+            window.addEventListener("scroll", () => {
+                if (window.scrollY > 200) {
+                    backToTopButton.classList.add("show");
+                } else {
+                    backToTopButton.classList.remove("show");
+                }
+            });
+            backToTopButton.addEventListener("click", (e) => {
+                e.preventDefault();
+                window.scrollTo({
+                    top: 0,
+                    behavior: "smooth",
+                });
+            });
+        });
+    </script>
     <script>
         // On page load or when changing themes, best to add inline in `head` to avoid FOUC
         if (localStorage.getItem("theme-color") === "dark" || (!("theme-color" in localStorage) && window.matchMedia("(prefers-color-scheme: dark)").matches)) {
@@ -1017,8 +1035,5 @@
     </script>
 
 </body>
-
-
-<!-- Mirrored from html.themewin.com/bastun-preview/bastun/project-details.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 19 Oct 2024 19:48:52 GMT -->
 
 </html>
