--- a/seo.html
+++ b/seo.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-     <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/icon.svg">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/icon.svg">
     <!-- Place favicon.ico in the root directory -->
 
     <!-- CSS here -->
@@ -539,7 +539,8 @@
                                     <a class="default__button sidebar__button__1" target="_blank"
                                         href="assets/img/download.pdf">Download PDF<i class="icofont-file-pdf"></i></a>
                                     <a class="default__button btn__black" target="_blank"
-                                        href="assets/img/download.docx">Download DOC<i class="icofont-file-document"></i></a>
+                                        href="assets/img/download.docx">Download DOC<i
+                                            class="icofont-file-document"></i></a>
                                 </div>
 
                             </div>
@@ -549,21 +550,25 @@
                         </div>
                         <!-- from -->
                         <div class="contact__input__wrapper contact__grident__bg" style="padding: 30px;">
-                            <form id="contact-form" class="contact-form" action="https://html.themewin.com/bastun-preview/bastun/mail.php" method="post">
+                            <form id="contact-form" class="contact-form"
+                                action="https://html.themewin.com/bastun-preview/bastun/mail.php" method="post">
                                 <div class="row">
                                     <div class="col-xl-12">
                                         <div class="contact__input">
-                                            <input class="contact__common__input" type="text" name="con_name" id="con_name" placeholder="Your Name">
+                                            <input class="contact__common__input" type="text" name="con_name"
+                                                id="con_name" placeholder="Your Name">
                                         </div>
                                     </div>
                                     <div class="col-xl-12">
                                         <div class="contact__input">
-                                            <input class="contact__common__input" type="text" name="con_email" id="con_email" placeholder="Email">
+                                            <input class="contact__common__input" type="text" name="con_email"
+                                                id="con_email" placeholder="Email">
                                         </div>
                                     </div>
                                     <div class="col-xl-12">
                                         <div class="contact__input">
-                                            <input class="contact__common__input" type="text" name="phone" placeholder="Phone">
+                                            <input class="contact__common__input" type="text" name="phone"
+                                                placeholder="Phone">
                                         </div>
                                     </div>
                                     <div class="col-xl-12">
@@ -575,11 +580,13 @@
                                         </select>
                                     </div>
                                     <div class="col-xl-12">
-                                        <textarea class="contact__common__input" name="con_message" id="con_message" cols="30" rows="10">write a message....</textarea>
+                                        <textarea class="contact__common__input" name="con_message" id="con_message"
+                                            cols="30" rows="10">write a message....</textarea>
                                     </div>
                                     <div class="col-xl-12">
                                         <div class="contact__button">
-                                            <button type="submit" value="submit" class="default__button" name="submit">SEND MESSAGE</button>
+                                            <button type="submit" value="submit" class="default__button"
+                                                name="submit">SEND MESSAGE</button>
                                             <p class="form-messege"></p>
                                         </div>
 
@@ -649,9 +656,9 @@
                                     vitae tortor condimentum. Etiam sit amet nisl purus in mollis nunc sed. Quam
                                     vulputate dignissim suspendisse in est ante in. Amet commodo nulla facilisi nullam
                                     vehicula. Arcu vitae elementum curabitur vitae nunc.</p>
-                               
+
                             </div>
-                          
+
                         </div>
                     </div>
                 </div>
@@ -831,18 +838,18 @@
                     <div class="col-md-12">
                         <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
                             <p>Duis ultricies lacus sed turpis
-                            tincidunt id aliquet risus feugiat. Aenean vel elit scelerisque mauris pellentesque
-                            pulvinar. Turpis egestas maecenas pharetra convallis. Ac turpis egestas maecenas
-                            pharetra convallis. Morbi tincidunt augue interdum velit euismod. Accumsan sit amet
-                            nulla facilisi morbi tempus. Scelerisque eleifend donec pretium vulputate sapien nec
-                            sagittis aliquam.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                            incididunt ut labore et dolore magna aliqua. Odio facilisis mauris sit amet massa
-                            vitae tortor condimentum. Etiam sit amet nisl purus in mollis nunc sed. Quam
-                            vulputate dignissim suspendisse in est ante in. Amet commodo nulla facilisi nullam
-                            vehicula. Arcu vitae elementum curabitur vitae nunc. Duis ultricies lacus sed turpis
-                            tincidunt id aliquet risus feugiat. Aenean vel elit scelerisque mauris pellentesque
-                            pulvinar.</p>
+                                tincidunt id aliquet risus feugiat. Aenean vel elit scelerisque mauris pellentesque
+                                pulvinar. Turpis egestas maecenas pharetra convallis. Ac turpis egestas maecenas
+                                pharetra convallis. Morbi tincidunt augue interdum velit euismod. Accumsan sit amet
+                                nulla facilisi morbi tempus. Scelerisque eleifend donec pretium vulputate sapien nec
+                                sagittis aliquam.</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                incididunt ut labore et dolore magna aliqua. Odio facilisis mauris sit amet massa
+                                vitae tortor condimentum. Etiam sit amet nisl purus in mollis nunc sed. Quam
+                                vulputate dignissim suspendisse in est ante in. Amet commodo nulla facilisi nullam
+                                vehicula. Arcu vitae elementum curabitur vitae nunc. Duis ultricies lacus sed turpis
+                                tincidunt id aliquet risus feugiat. Aenean vel elit scelerisque mauris pellentesque
+                                pulvinar.</p>
                         </div>
                         <div class="service__details__button" data-aos="fade-up" data-aos-duration="1500">
                             <a class="default__button" href="#">GET A FREE QUOTE</a>
@@ -992,7 +999,7 @@
                     <div class="row align-items-center">
                         <div class="col-xl-6 col-lg-6 col-md-6 col-12">
                             <div class="copyright__left">
-                      <p>Copyright © 2024 <a href="index.html">Digitalminds on.</a> All Right Reserved</p>
+                                <p>Copyright © 2024 <a href="index.html">Digitalminds on.</a> All Right Reserved</p>
                             </div>
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-6 col-12">
@@ -1014,13 +1021,14 @@
             </div>
         </div>
         <!-- footer__section__end -->
-             <!-- back to top -->
-             <a href="#top" class="back-to-top" id="backToTop">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up">
-                    <path d="M12 19V6M5 12l7-7 7 7"/>
-                </svg>
-            </a>
-                   <!-- back to top -->
+        <!-- back to top -->
+        <a class="back-to-top" id="backToTop">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up">
+                <path d="M12 19V6M5 12l7-7 7 7" />
+            </svg>
+        </a>
+        <!-- back to top -->
     </main>
     <!-- JS here -->
     <script src="assets/js/popper.min.js"></script>
@@ -1029,7 +1037,26 @@
     <script src="assets/js/plugins.js"></script>
     <script src="assets/js/swiper-bundle.min.js"></script>
     <script src="assets/js/main.js"></script>
-
+    <!-- back to top -->
+    <script>
+        document.addEventListener("DOMContentLoaded", () => {
+            const backToTopButton = document.getElementById("backToTop");
+            window.addEventListener("scroll", () => {
+                if (window.scrollY > 200) {
+                    backToTopButton.classList.add("show");
+                } else {
+                    backToTopButton.classList.remove("show");
+                }
+            });
+            backToTopButton.addEventListener("click", (e) => {
+                e.preventDefault();
+                window.scrollTo({
+                    top: 0,
+                    behavior: "smooth",
+                });
+            });
+        });
+    </script>
     <script>
         // On page load or when changing themes, best to add inline in `head` to avoid FOUC
         if (localStorage.getItem("theme-color") === "dark" || (!("theme-color" in localStorage) && window.matchMedia("(prefers-color-scheme: dark)").matches)) {
