--- a/game-development-services.html
+++ b/game-development-services.html
@@ -339,8 +339,8 @@
                             </div>
                             <div class="banner-button">
                                 <ul class="common-button">
-                                    <a class="default__button" href="#">GET FREE QUATE</a>
-                                    <a class="default__button" href="#">Contact Us</a>
+                                    <a class="default__button" href="request-quote">GET FREE QUATE</a>
+                                    <a class="default__button" href="contact">CONTACT US</a>
                                 </ul>
                             </div>
                         </div>
@@ -381,53 +381,53 @@
                                 <div class="sidebar__list">
                                     <ul>
                                         <li>
-                                            <a class="sidebar__common__input" href="#">Web Development
+                                            <a class="sidebar__common__input" href="web-development-services">Web Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="#">Software Development
+                                            <a class="sidebar__common__input" href="software-development-services">Software Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="#">App Development
+                                            <a class="sidebar__common__input" href="mobile-app-development-services">App Development
 
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="#">Digital Marketing
+                                            <a class="sidebar__common__input" href="digital-marketing-services">Digital Marketing
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="#">WordPress Development
+                                            <a class="sidebar__common__input" href="wordpress-development-services">WordPress Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="uidesign.html">UI/UX Design
+                                            <a class="sidebar__common__input" href="ui-ux-design">UI/UX Design
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
                                         <li>
-                                            <a class="sidebar__common__input" href="#">Game Development
+                                            <a class="sidebar__common__input" href="game-development-services">Game Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
                                         <li>
-                                            <a class="sidebar__common__input" href="#">SEO Specialist
+                                            <a class="sidebar__common__input" href="seo-services">SEO Specialist
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
                                         <li>
-                                            <a class="sidebar__common__input" href="#">Content creator
+                                            <a class="sidebar__common__input" href="content-creater">Content creator
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
@@ -776,7 +776,7 @@
                             </p>
                         </div>
                         <div class="service__details__button" data-aos="fade-up" data-aos-duration="1500">
-                            <a class="default__button" href="#">GET A FREE QUOTE</a>
+                            <a class="default__button" href="request-quote">GET A FREE QUOTE</a>
                         </div>
                     </div>
                 </div>
