--- a/network-services.html
+++ b/network-services.html
@@ -341,8 +341,8 @@
                             </div>
                             <div class="banner-button">
                                 <ul class="common-button">
-                                    <a class="default__button" href="#">GET FREE QUATE</a>
-                                    <a class="default__button" href="#">GET FREE QUATE</a>
+                                    <a class="default__button" href="request-quote">GET FREE QUATE</a>
+                                    <a class="default__button" href="contact">CONTACT US</a>
                                 </ul>
                             </div>
                         </div>
@@ -379,54 +379,6 @@
 
                             </div>
 
-                            <!-- <div class="sidebar__widget" data-aos="fade-up" data-aos-duration="1800">
-
-                                <div class="sidebar__title">
-                                    <h5>All Services:</h5>
-                                </div>
-                                <div class="sidebar__list">
-                                    <ul>
-                                        <li>
-                                            <a class="sidebar__common__input" href="#">Strategic Planning
-                                                <i class="icofont-rounded-right"></i>
-                                            </a>
-                                        </li>
-
-                                        <li>
-                                            <a class="sidebar__common__input" href="#">Market Entry Strategy
-                                                <i class="icofont-rounded-right"></i>
-                                            </a>
-                                        </li>
-
-                                        <li>
-                                            <a class="sidebar__common__input" href="#">Business Process optimization
-
-                                                <i class="icofont-rounded-right"></i>
-                                            </a>
-                                        </li>
-
-                                        <li>
-                                            <a class="sidebar__common__input" href="#">Financial Restructuring
-                                                <i class="icofont-rounded-right"></i>
-                                            </a>
-                                        </li>
-
-                                        <li>
-                                            <a class="sidebar__common__input" href="#">Cost Reduction Analysis
-                                                <i class="icofont-rounded-right"></i>
-                                            </a>
-                                        </li>
-
-                                        <li>
-                                            <a class="sidebar__common__input" href="#">Supply Chain Optimization
-                                                <i class="icofont-rounded-right"></i>
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </div>
-
-                            </div> -->
-
                             <div class="sidebar__widget" data-aos="fade-up" data-aos-duration="1800">
 
                                 <div class="sidebar__title">
@@ -435,60 +387,60 @@
                                 <div class="sidebar__list">
                                     <ul>
                                         <li>
-                                            <a class="sidebar__common__input" href="webdevelopment.html">Web Development
+                                            <a class="sidebar__common__input" href="web-development-services">Web Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="software.html">Software Development
+                                            <a class="sidebar__common__input" href="software-development-services">Software Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="appdevelop.html">App Development
+                                            <a class="sidebar__common__input" href="mobile-app-development-services">App Development
 
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="digtalmarketing.html">Digital
+                                            <a class="sidebar__common__input" href="digital-marketing-services">Digital
                                                 Marketing
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="wordpress.html">WordPress
+                                            <a class="sidebar__common__input" href="wordpress-development-services">WordPress
                                                 Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="uidesign.html">UI/UX Design
+                                            <a class="sidebar__common__input" href="ui-ux-design">UI/UX Design
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
                                         <li>
-                                            <a class="sidebar__common__input" href="GameDevelop.html">Game Development
+                                            <a class="sidebar__common__input" href="game-development-services">Game Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
                                         <li>
-                                            <a class="sidebar__common__input" href="seo.html">SEO Specialist
+                                            <a class="sidebar__common__input" href="seo-services">SEO Specialist
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
                                         <li>
-                                            <a class="sidebar__common__input" href="#">Content creator
+                                            <a class="sidebar__common__input" href="content-creater">Content creator
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
                                         <li>
-                                            <a class="sidebar__common__input" href="itexpert.html">IT Specialists
+                                            <a class="sidebar__common__input" href="network-services">IT Specialists
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
@@ -919,7 +871,7 @@
                                 effectiveness.</p>
                         </div>
                         <div class="service__details__button" data-aos="fade-up" data-aos-duration="1500">
-                            <a class="default__button" href="#">GET A FREE QUOTE</a>
+                            <a class="default__button" href="request-quote.html">GET A FREE QUOTE</a>
                         </div>
                     </div>
                 </div>
